target/debug/build/crossbeam-utils-01c435650d488bd3/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     | 
    ::: /home/knoldus/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:2137:1
     |
2137 | / atomic_int! {
2138 | |     cfg(target_has_atomic = "16"),
2139 | |     cfg(target_has_atomic_equal_alignment = "16"),
2140 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
2153 | |     u16 AtomicU16 ATOMIC_U16_INIT
2154 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
